tests/integration/error/import_private_visibility.alo
// expect-error: Undefined function 'private_value'

import "../fixtures/visibility_symbols.alo";

fun main() -> void {
    private_value();
}
